--- a/src/main/java/fr/iut/montreuil/S05_R08/tp01_GestionVersion/vue/sample.fxml
+++ b/src/main/java/fr/iut/montreuil/S05_R08/tp01_GestionVersion/vue/sample.fxml
@@ -30,7 +30,7 @@
    <center>
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" scaleX="1.5" scaleY="1.5">
          <children>
-         <Pane fx:id="gamePane" centerShape="false" layoutX="505.0" layoutY="278.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="164.0" prefWidth="270.0" style="-fx-background-color: #f5f6fa00;">
+            <Pane fx:id="gamePane" centerShape="false" layoutX="505.0" layoutY="278.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="164.0" prefWidth="270.0" style="-fx-background-color: #f5f6fa00;">
                <children>
                   <TilePane fx:id="tilePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="320.0" />
                   <TilePane fx:id="tilePaneSolid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="320.0" />
@@ -1193,7 +1193,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER" layoutX="27.0" layoutY="408.0" prefHeight="39.0" prefWidth="846.0" text="ISSA Anthony | NAZICAL David | SASIRAJAH Sashtiga" textFill="#f8f2c5">
+                  <Label alignment="CENTER" layoutX="27.0" layoutY="408.0" prefHeight="39.0" prefWidth="846.0" text="YANG Steven" textFill="#f8f2c5">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -1227,7 +1227,7 @@
                                     <Insets top="-40.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label alignment="CENTER" prefHeight="43.0" prefWidth="898.0" text="A creation of DAS Company - Maven Edition Hacked By J.Marcinkowski" textFill="#c39d60">
+                              <Label alignment="CENTER" prefHeight="43.0" prefWidth="898.0" text="A creation of Y Company - Maven Edition Hacked By J.Marcinkowski" textFill="#c39d60">
                                  <font>
                                     <Font size="17.0" />
                                  </font>
@@ -1253,7 +1253,7 @@
                      </image>
                   </ImageView>
                </children>
-            </Pane> 
+            </Pane>
          </children>
       </Pane>
    </center>
