--- a/src/main/java/fr/iut/montreuil/S05_R08/tp01_GestionVersion/vue/sample.fxml
+++ b/src/main/java/fr/iut/montreuil/S05_R08/tp01_GestionVersion/vue/sample.fxml
@@ -129,7 +129,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </ImageView>
-                        <ImageView fx:id="inventoryViande" fitHeight="25.0" fitWidth="25.0" layoutX="83.0" layoutY="18.0" onMouseClicked="#setDescription" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="inventoryPain" fitHeight="25.0" fitWidth="25.0" layoutX="83.0" layoutY="18.0" onMouseClicked="#setDescription" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../ressources/HUD/objet/beef.png" />
                            </image>
@@ -652,7 +652,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </ImageView>
-                        <ImageView fx:id="inventoryViande" fitHeight="16.0" fitWidth="16.0" layoutX="83.0" layoutY="18.0" onMouseClicked="#setDescription" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="inventoryPain" fitHeight="16.0" fitWidth="16.0" layoutX="83.0" layoutY="18.0" onMouseClicked="#setDescription" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../ressources/HUD/objet/beef.png" />
                            </image>
@@ -762,7 +762,7 @@
                               <SepiaTone />
                            </effect>
                         </RadioButton>
-                        <RadioButton fx:id="Viande" layoutX="98.0" layoutY="61.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="17.0" toggleGroup="$shopRadio">
+                        <RadioButton fx:id="Pain" layoutX="98.0" layoutY="61.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="17.0" toggleGroup="$shopRadio">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
